--- a/index.html
+++ b/index.html
@@ -5,7 +5,131 @@
     <title>Link for Constable</title>
     <link href="output.css" rel="stylesheet" type="text/css">
   </head>
-  <body>
-<h1>Link for Constable</h1>
+<!--<h1>Link for Constable</h1>
+<img src="https://vignette.wikia.nocookie.net/zelda/images/2/2a/Link_Hyrule_Warriors.png/revision/latest?cb=20140620205907" alt="Link"/>
+<h2>Introducing your new <span>"Hero of the Bluegrass"</span></h2>
+<p>Hero of Legend and bearer of the Trifore of Courage. Link has 32 years of
+  experience in combating the forces of evil and saving his homeland Hyrule.</p>
+  <h2>Reason for Running</h2>
+  <p>After saving Princess Zelda for the 13th time, overthrowing the Evil Tyrant Ganon's
+  rule over my country and restore peace and harmony back the the people of Hyrule;Link decided
+to leave Hyrule to find other lands that may need his assistance. After coming across Fayette County
+by horseback last year and residing amongst its people, Link believes that he can be the hero that
+Fayette County deserves.</p>
+<h2>Issues</h2>
+<ol>
+  <li>Protecting the innocent from evil terrorizing the land.</li>
+
+  <li>Insuring that law enforcment have the best healthcare.</li>
+  <li>Less oversight by the government and more oversight by the Goddess Hylia.</li>
+</ol>
+<h1>Remember</h1>
+<h2>The election is November 6</h2>
+-->
+<body>
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+      <a class="navbar-brand" href="#">Link for Constable</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Link</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled" href="#">Disabled</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+            <div class="dropdown-menu" aria-labelledby="dropdown01">
+              <a class="dropdown-item" href="#">Reason for running</a>
+              <a class="dropdown-item" href="#">Issues</a>
+            </div>
+          </li>
+        </ul>
+        <form class="form-inline my-2 my-lg-0">
+          <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        </form>
+      </div>
+    </nav>
+
+    <main role="main">
+
+      <!-- Main jumbotron for a primary marketing message or call to action -->
+      <div class="jumbotron">
+        <div class="container">
+          <h1 class="display-3">Introducing your new <span>"Hero of the Bluegrass"</span></h1>
+          <p>Hero of Legend and bearer of the Trifore of Courage. Link has 32 years of
+            experience in combating the forces of evil and saving his homeland Hyrule.</p>
+          <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+        </div>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <h2>Reason for Running</h2>
+          </div>
+          <div class="row">
+            <p>After saving Princess Zelda for the 13th time, overthrowing the Evil Tyrant Ganon's
+            rule over my country and restore peace and harmony back the the people of Hyrule;Link decided
+          to leave Hyrule to find other lands that may need his assistance. After coming across Fayette County
+          by horseback last year and residing amongst its people, Link believes that he can be the hero that
+          Fayette County deserves.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="container">
+        <!-- Example row of columns -->
+        <div class ="row">
+          <div class="col-lg">
+            <h2>Issues</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4">
+            <h2>Issue 1</h2>
+            <p>Protecting the innocent from evil terrorizing the land.</p>
+            <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+          </div>
+          <div class="col-md-4">
+            <h2>Issue 2</h2>
+            <p>Insuring that law enforcment have the best healthcare.</p>
+            <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+          </div>
+          <div class="col-md-4">
+            <h2>Issue 3</h2>
+            <p>Less oversight by the government and more oversight by the Goddess Hylia.</p>
+            <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+          </div>
+        </div>
+        <div class="container">
+          <div class="row">
+            <div class="col-lg">
+              <h1>Remember</h1>
+            </div>
+          </div>
+            <div class="row">
+              <div class="col-lg">
+                <h2>The election is November 6</h2>
+              </div>
+            </div>
+        </div>
+
+        <hr>
+
+      </div> <!-- /container -->
+
+    </main>
+
+    <footer class="container">
+      <p>&copy;2018</p>
+    </footer>
   </body>
 </html>
