Created instructions on README file

--- a/index.html
+++ b/index.html
@@ -63,11 +63,16 @@ Fayette County deserves.</p>
 
       <!-- Main jumbotron for a primary marketing message or call to action -->
       <div class="jumbotron">
-        <div class="container">
-          <h1 class="display-3">Introducing your new <span>"Hero of the Bluegrass"</span></h1>
-          <p>Hero of Legend and bearer of the Trifore of Courage. Link has 32 years of
-            experience in combating the forces of evil and saving his homeland Hyrule.</p>
-          <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+          <div class="container row">
+       <div class="col-6">
+           <img src="https://vignette.wikia.nocookie.net/zelda/images/2/2a/Link_Hyrule_Warriors.png/revision/latest?cb=20140620205907" class="img-responsive" style="width:100%; height:auto;"/>
+       </div>
+       <div class="col-6">
+           <h1 class="display-2">Introducing your new <span>"Hero of the Bluegrass"</span></h1>
+           <p>Hero of Legend and bearer of the Trifore of Courage. Link has 32 years of
+             experience in combating the forces of evil and saving his homeland Hyrule.</p>
+           <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+       </div>
         </div>
       </div>
       <div class="container">
@@ -93,43 +98,40 @@ Fayette County deserves.</p>
           </div>
         </div>
         <div class="row">
-          <div class="col-md-4">
-            <h2>Issue 1</h2>
+          <div class="col-md-4 issue">
+            <h4>Issue 1</h4>
             <p>Protecting the innocent from evil terrorizing the land.</p>
             <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
           </div>
-          <div class="col-md-4">
-            <h2>Issue 2</h2>
+          <div class="col-md-4 issue">
+            <h4>Issue 2</h4>
             <p>Insuring that law enforcment have the best healthcare.</p>
             <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
           </div>
-          <div class="col-md-4">
-            <h2>Issue 3</h2>
+          <div class="col-md-4 issue">
+            <h4>Issue 3</h4>
             <p>Less oversight by the government and more oversight by the Goddess Hylia.</p>
             <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
           </div>
         </div>
         <div class="container">
           <div class="row">
-            <div class="col-lg">
+            <div class="col">
               <h1>Remember</h1>
             </div>
           </div>
             <div class="row">
-              <div class="col-lg">
+              <div class="col">
                 <h2>The election is November 6</h2>
               </div>
             </div>
         </div>
-
-        <hr>
-
       </div> <!-- /container -->
-
     </main>
-
-    <footer class="container">
+    <footer class="container-fluid">
       <p>&copy;2018</p>
     </footer>
-  </body>
+</body>
+
+
 </html>
