fixed typo and added main.js

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           </div>
           <div class="row">
             <p>After saving Princess Zelda for the 13th time, overthrowing the Evil Tyrant Ganon's
-            rule over my country and restore peace and harmony back the the people of Hyrule;Link decided
+            rule over Hyrule and restore peace and harmony back the people of Hyrule;Link decided
           to leave Hyrule to find other lands that may need his assistance. After coming across Fayette County
           by horseback last year and residing amongst its people, Link believes that he can be the hero that
           Fayette County deserves.</p>
@@ -110,6 +110,7 @@
     <footer class="container-fluid">
       <p>&copy;2018</p>
     </footer>
+    <script src="main.js"></script>
 </body>
 
 
