--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="output.css" rel="stylesheet" type="text/css">
   </head>
 <body>
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+    <nav class="navbar navbar-expand-md ">
       <a class="navbar-brand" href="#">Link for Constable</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -42,7 +42,7 @@
 
       <!-- Main jumbotron for a primary marketing message or call to action -->
       <div class="jumbotron">
-          <div class="container row">
+          <div class="row">
        <div class="col-6">
            <img src="https://vignette.wikia.nocookie.net/zelda/images/2/2a/Link_Hyrule_Warriors.png/revision/latest?cb=20140620205907" class="img-responsive" style="width:100%; height:auto;"/>
        </div>
@@ -50,11 +50,11 @@
            <h1 class="display-2">Introducing your new <span>"Hero of the Bluegrass"</span></h1>
            <p>Hero of Legend and bearer of the Trifore of Courage. Link has 32 years of
              experience in combating the forces of evil and saving his homeland Hyrule.</p>
-           <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+           <p><a class="btn btn-secondary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
        </div>
         </div>
       </div>
-      <div class="container">
+      <div class="container-fluid">
         <div class="row">
           <div class="col">
             <h2>Reason for Running</h2>
@@ -69,7 +69,7 @@
         </div>
       </div>
 
-      <div class="container">
+      <div class="container-fluid">
         <!-- Example row of columns -->
         <div class ="row">
           <div class="col-lg">
@@ -93,7 +93,7 @@
             <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
           </div>
         </div>
-        <div class="container">
+        <div class="container-fluid">
           <div class="row">
             <div class="col">
               <h1>Remember</h1>
