--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <a class="nav-link disabled" href="#">Disabled</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+            <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
             <div class="dropdown-menu" aria-labelledby="dropdown01">
               <a class="dropdown-item" href="#">Reason for running</a>
               <a class="dropdown-item" href="#">Issues</a>
@@ -46,7 +46,7 @@
        <div class="col-6">
            <img src="https://vignette.wikia.nocookie.net/zelda/images/2/2a/Link_Hyrule_Warriors.png/revision/latest?cb=20140620205907" class="img-responsive" style="width:100%; height:auto;"/>
        </div>
-       <div class="col-6">
+       <div class="col-6 txt">
            <h1 class="display-2">Introducing your new <span>"Hero of the Bluegrass"</span></h1>
            <p>Hero of Legend and bearer of the Trifore of Courage. Link has 32 years of
              experience in combating the forces of evil and saving his homeland Hyrule.</p>
@@ -54,7 +54,7 @@
        </div>
         </div>
       </div>
-      <div class="container-fluid">
+      <div class="container">
         <div class="row">
           <div class="col">
             <h2>Reason for Running</h2>
@@ -69,7 +69,7 @@
         </div>
       </div>
 
-      <div class="container-fluid">
+      <div class="container">
         <!-- Example row of columns -->
         <div class ="row">
           <div class="col-lg">
